language/move-lang/tests/move_check/parser/function_type_extra_comma.exp
error: 

   ┌── tests/move_check/parser/function_type_extra_comma.move:2:12 ───
   │
 2 │     fun fn<,T>() { } // Test a comma before the first type parameter
   │            ^ Expected a type parameter
   │

