language/move-lang/tests/move_check/parser/function_type_extra_comma.move
module M {
    fun fn<,T>() { } // Test a comma before the first type parameter
}
